# generic-call-resource

./: .gitignore  Cargo.toml  README.md  taplo.toml
.github/workflows/: ci.yml
generic_call_circuit/: Cargo.toml  README.md
generic_call_circuit/methods/: Cargo.toml
generic_call_circuit/methods/guest/: Cargo.toml
generic_call_circuit/methods/guest/src/: main.rs
generic_call_circuit/src/: test.rs
generic_call_library/: Cargo.toml  README.md
generic_call_library/src/: lib.rs
generic_call_witness/: Cargo.toml  README.md
generic_call_witness/src/: lib.rs
