[workspace]
exclude = ["generic_call_circuit"]
members = ["generic_call_witness", "generic_call_library"]
resolver = "3"

[workspace.package]
authors = ["Heliax <hello@heliax.dev>"]
edition = "2024"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/anoma/generic-call-resource"
version = "1.0.0-rc.0"

[workspace.dependencies]
alloy-primitives = "1.0.23"
alloy-sol-types = "1.0.23"
anoma-generic-call-library = { path = "generic_call_library", version = "1.0.0-rc.0" }
anoma-generic-call-witness = "1.0.0-rc.0"
anoma-rm-risc0 = { version = "1.1.1", default-features = false }
anoma-rm-risc0-gadgets = "1.1.1"
hex = "0.4"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3
