[package]
edition = "2021"
name = "generic-call-guest"
version = "1.0.0-rc.0"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
generic_call_witness = { path = "../../../generic_call_witness" }
risc0-zkvm = { version = "3.0.3", features = ["std", "unstable"] }
